--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,16 @@ services:
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/bizmatchke
       - NODE_ENV=production
+      - NEXTAUTH_URL=http://localhost:3000
+      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
       - GROQ_API_KEY=${GROQ_API_KEY}
       - SESSION_SECRET=${SESSION_SECRET}
+    volumes:
+      - .:/app
+      - /app/node_modules
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     restart: unless-stopped
 
   db:
@@ -26,6 +32,11 @@ services:
       - POSTGRES_DB=bizmatchke
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     restart: unless-stopped
 
 volumes:
