--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,9 +5,6 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  # Optional: Add scheduled runs
-  # schedule:
-  #   - cron: '0 0 * * *' # Runs daily at midnight
 
 env:
   REGISTRY: ghcr.io
@@ -43,6 +40,11 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
+
+    - name: Run database migrations
+      env:
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/bizmatchke_test
+      run: npm run migrate
 
     - name: Run linting
       run: npm run lint
@@ -83,6 +85,9 @@ jobs:
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
+        build-args: |
+          NEXT_PUBLIC_GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
+          SESSION_SECRET=${{ secrets.SESSION_SECRET }}
 
     - name: Set up SSH
       run: |
@@ -93,4 +98,4 @@ jobs:
 
     - name: Deploy to production server
       run: |
-        ssh ${{ secrets.SERVER_BOT }}@${{ secrets.SERVER_IP }} "cd ${{ env.DEPLOY_PATH }} && ./deploy.sh" 
+        ssh ${{ secrets.SERVER_BOT }}@${{ secrets.SERVER_IP }} "cd ${{ env.DEPLOY_PATH }} && ./deploy.sh"
