--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,17 +1,3 @@
-name: CI/CD Pipeline
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-  DEPLOY_PATH: /var/www/bizmatchke
-
-jobs:
   test:
     runs-on: ubuntu-latest
     services:
@@ -43,62 +29,19 @@ jobs:
 
     - name: Run database migrations
       env:
-        DATABASE_URL: ${{ secrets.DATABASE_URL }}  # Using Render database URL from secrets
-      run: npm run migrate
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        NODE_ENV: test
+      run: |
+        echo "Running migrations with database URL: ${DATABASE_URL:0:20}..." # Log first 20 chars for debugging
+        npm run migrate
 
     - name: Run linting
       run: npm run lint
 
     - name: Run tests
       env:
-        DATABASE_URL: ${{ secrets.DATABASE_URL }}  # Using Render database URL from secrets
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
         GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
         SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+        NODE_ENV: test
       run: npm test
-
-  build-and-deploy:
-    needs: test
-    runs-on: ubuntu-latest
-    environment: production
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Log in to Container registry
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: |
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        build-args: |
-          NEXT_PUBLIC_GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
-          SESSION_SECRET=${{ secrets.SESSION_SECRET }}
-          DATABASE_URL=${{ secrets.DATABASE_URL }}  # Added DATABASE_URL to build args
-
-    - name: Set up SSH
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_ed25519
-        chmod 600 ~/.ssh/id_ed25519
-        ssh-keyscan ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
-
-    - name: Deploy to production server
-      env:
-        DATABASE_URL: ${{ secrets.DATABASE_URL }}  # Pass DATABASE_URL to deploy script
-      run: |
-        ssh ${{ secrets.SERVER_BOT }}@${{ secrets.SERVER_IP }} "cd ${{ env.DEPLOY_PATH }} && DATABASE_URL=${{ secrets.DATABASE_URL }} ./deploy.sh"
