--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,3 +1,20 @@
+name: CI/CD Pipeline
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  # Optional: Add scheduled runs
+  # schedule:
+  #   - cron: '0 0 * * *' # Runs daily at midnight
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+  DEPLOY_PATH: /var/www/bizmatchke
+
+jobs:
   test:
     runs-on: ubuntu-latest
     services:
@@ -26,6 +43,7 @@
 
     - name: Install dependencies
       run: npm ci
+
     - name: Test database connection
       env:
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -47,6 +65,7 @@
               process.exit(1);
             });
         "
+
     - name: Run database migrations
       env:
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -63,5 +82,45 @@
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
         GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
         SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
-        NODE_ENV: test
       run: npm test
+
+  build-and-deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    environment: production
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Container registry
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: |
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+
+    - name: Set up SSH
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_ed25519
+        chmod 600 ~/.ssh/id_ed25519
+        ssh-keyscan ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+
+    - name: Deploy to production server
+      run: |
+        ssh ${{ secrets.SERVER_BOT }}@${{ secrets.SERVER_IP }} "cd ${{ env.DEPLOY_PATH }} && ./deploy.sh" 
