--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,20 +52,19 @@ jobs:
         node -e "
           const { Pool } = require('pg');
           try {
-            const url = new URL(process.env.DATABASE_URL);
-            const config = {
-              host: url.hostname,
-              port: url.port,
-              database: url.pathname.slice(1),
-              user: url.username,
-              password: url.password,
-              ssl: false
-            };
-            console.log('Connecting to database with config:', {
-              ...config,
-              password: '***' // Hide password in logs
+            // Log the first few characters of the URL for debugging (safely)
+            const dbUrl = process.env.DATABASE_URL;
+            console.log('Database URL starts with:', dbUrl.substring(0, 20) + '...');
+            
+            // Create pool directly with connection string
+            const pool = new Pool({
+              connectionString: dbUrl,
+              ssl: {
+                rejectUnauthorized: false
+              }
             });
-            const pool = new Pool(config);
+            
+            console.log('Attempting database connection...');
             pool.query('SELECT 1')
               .then(() => {
                 console.log('Database connection successful');
@@ -76,7 +75,7 @@ jobs:
                 process.exit(1);
               });
           } catch (err) {
-            console.error('Error parsing DATABASE_URL:', err.message);
+            console.error('Error setting up database connection:', err.message);
             process.exit(1);
           }
         "
@@ -139,3 +138,4 @@ jobs:
     - name: Deploy to production server
       run: |
         ssh ${{ secrets.SERVER_BOT }}@${{ secrets.SERVER_IP }} "cd ${{ env.DEPLOY_PATH }} && ./deploy.sh" 
+        
