--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,28 +52,40 @@ jobs:
         node -e "
           const { Pool } = require('pg');
           try {
-            // Log the first few characters of the URL for debugging (safely)
             const dbUrl = process.env.DATABASE_URL;
             console.log('Database URL starts with:', dbUrl.substring(0, 20) + '...');
             
-            // Create pool directly with connection string
-            const pool = new Pool({
-              connectionString: dbUrl,
-              ssl: {
-                rejectUnauthorized: false
-              }
-            });
+            // Try different SSL configurations
+            const sslConfigs = [
+              { ssl: false },
+              { ssl: { rejectUnauthorized: false } },
+              { ssl: true }
+            ];
             
-            console.log('Attempting database connection...');
-            pool.query('SELECT 1')
-              .then(() => {
-                console.log('Database connection successful');
+            async function tryConnection(config) {
+              try {
+                const pool = new Pool({
+                  connectionString: dbUrl,
+                  ...config
+                });
+                await pool.query('SELECT 1');
+                console.log('Database connection successful with config:', config);
                 process.exit(0);
-              })
-              .catch(err => {
-                console.error('Database connection failed:', err.message);
-                process.exit(1);
-              });
+              } catch (err) {
+                console.log('Connection failed with config:', config, 'Error:', err.message);
+                return false;
+              }
+            }
+            
+            // Try each configuration
+            for (const config of sslConfigs) {
+              console.log('Trying connection with config:', config);
+              const success = await tryConnection(config);
+              if (success) break;
+            }
+            
+            console.error('All connection attempts failed');
+            process.exit(1);
           } catch (err) {
             console.error('Error setting up database connection:', err.message);
             process.exit(1);
@@ -138,4 +150,3 @@ jobs:
     - name: Deploy to production server
       run: |
         ssh ${{ secrets.SERVER_BOT }}@${{ secrets.SERVER_IP }} "cd ${{ env.DEPLOY_PATH }} && ./deploy.sh" 
-        
