--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,8 +49,10 @@ jobs:
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
       run: |
         echo "Testing database connection..."
-        node -e "
-          const { Pool } = require('pg');
+        node --input-type=module -e "
+          import pg from 'pg';
+          const { Pool } = pg;
+          
           try {
             const dbUrl = process.env.DATABASE_URL;
             console.log('Database URL starts with:', dbUrl.substring(0, 20) + '...');
