--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
   # Optional: Add scheduled runs
   # schedule:
-     - cron: '0 0 * * *' # Runs daily at midnight
+  # - cron: '0 0 * * *' # Runs daily at midnight
 
 env:
   REGISTRY: ghcr.io
