--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,8 +53,32 @@ jobs:
         const { Pool } = require('pg');
 
         async function testConnection() {
+          // Verify DATABASE_URL is set
+          if (!process.env.DATABASE_URL) {
+            console.error('DATABASE_URL environment variable is not set');
+            process.exit(1);
+          }
+
           const dbUrl = process.env.DATABASE_URL;
+          console.log('Database URL length:', dbUrl.length);
           console.log('Database URL starts with:', dbUrl.substring(0, 20) + '...');
+          console.log('Database URL ends with:', '...' + dbUrl.substring(dbUrl.length - 20));
+
+          // Parse the URL to verify its structure
+          try {
+            const url = new URL(dbUrl);
+            console.log('URL parsed successfully:');
+            console.log('- Protocol:', url.protocol);
+            console.log('- Host:', url.hostname);
+            console.log('- Port:', url.port);
+            console.log('- Database:', url.pathname.slice(1));
+            console.log('- Username:', url.username);
+            console.log('- Has password:', !!url.password);
+            console.log('- Search params:', url.search);
+          } catch (err) {
+            console.error('Failed to parse DATABASE_URL:', err.message);
+            process.exit(1);
+          }
 
           const config = {
             connectionString: dbUrl,
@@ -63,7 +87,10 @@ jobs:
             }
           };
 
-          console.log('Attempting connection with config:', JSON.stringify(config, null, 2));
+          console.log('Attempting connection with config:', JSON.stringify({
+            ...config,
+            connectionString: config.connectionString.substring(0, 20) + '...'
+          }, null, 2));
           
           try {
             const pool = new Pool(config);
