--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,6 +45,25 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Verify secrets
+      run: |
+        echo "Checking available secrets..."
+        if [ -n "${{ secrets.DATABASE_URL }}" ]; then
+          echo "DATABASE_URL secret exists"
+        else
+          echo "DATABASE_URL secret is not set"
+        fi
+        if [ -n "${{ secrets.GROQ_API_KEY }}" ]; then
+          echo "GROQ_API_KEY secret exists"
+        else
+          echo "GROQ_API_KEY secret is not set"
+        fi
+        if [ -n "${{ secrets.SESSION_SECRET }}" ]; then
+          echo "SESSION_SECRET secret exists"
+        else
+          echo "SESSION_SECRET secret is not set"
+        fi
+
     - name: Test database connection
       env:
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
