--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,7 +18,6 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
-    environment: feature
     services:
       postgres:
         image: postgres:16-alpine
@@ -44,7 +43,9 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: |
+        npm ci
+        npm install --save-dev eslint @next/eslint-plugin-next
 
     - name: Verify secrets
       run: |
@@ -158,7 +159,7 @@ jobs:
         }
         EOF
         # Run linting with the new config
-        npm run lint
+        npx eslint . --ext .js,.jsx,.ts,.tsx
 
     - name: Run tests
       env:
