--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,7 +46,9 @@ jobs:
     - name: Install dependencies
       run: |
         npm ci
-        npm install --save-dev eslint@^8.0.0 @next/eslint-plugin-next
+        # Ensure required ESLint packages for Next.js are installed
+        npm install --save-dev eslint @next/eslint-plugin-next eslint-config-next
+
 
     - name: Verify secrets
       run: |
