--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint ."
     "migrate": "node scripts/run-migrations.js",
     "test:db": "ts-node -r dotenv/config scripts/test-db.ts"
   },
