--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,125 +44,10 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: |
-        npm ci
-        npm install --save-dev eslint@8 @next/eslint-plugin-next eslint-config-next
-
-
-
-    - name: Verify secrets
-      run: |
-        echo "Checking available secrets..."
-        if [ -n "${{ secrets.DATABASE_URL }}" ]; then
-          echo "DATABASE_URL secret exists"
-        else
-          echo "DATABASE_URL secret is not set"
-        fi
-        if [ -n "${{ secrets.GROQ_API_KEY }}" ]; then
-          echo "GROQ_API_KEY secret exists"
-        else
-          echo "GROQ_API_KEY secret is not set"
-        fi
-        if [ -n "${{ secrets.SESSION_SECRET }}" ]; then
-          echo "SESSION_SECRET secret exists"
-        else
-          echo "SESSION_SECRET secret is not set"
-        fi
-
-    - name: Test database connection
-      env:
-        DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      run: |
-        echo "Testing database connection..."
-        echo "Checking if DATABASE_URL secret exists..."
-        if [ -z "$DATABASE_URL" ]; then
-          echo "DATABASE_URL is empty or not set"
-          exit 1
-        fi
-        echo "DATABASE_URL is set (length: ${#DATABASE_URL})"
-        
-        cat > test-db.js << 'EOF'
-        const { Pool } = require('pg');
-
-        async function testConnection() {
-          // Verify DATABASE_URL is set
-          if (!process.env.DATABASE_URL) {
-            console.error('DATABASE_URL environment variable is not set');
-            process.exit(1);
-          }
-
-          const dbUrl = process.env.DATABASE_URL;
-          console.log('Database URL length:', dbUrl.length);
-          console.log('Database URL starts with:', dbUrl.substring(0, 20) + '...');
-          console.log('Database URL ends with:', '...' + dbUrl.substring(dbUrl.length - 20));
-
-          // Parse the URL to verify its structure
-          try {
-            const url = new URL(dbUrl);
-            console.log('URL parsed successfully:');
-            console.log('- Protocol:', url.protocol);
-            console.log('- Host:', url.hostname);
-            console.log('- Port:', url.port);
-            console.log('- Database:', url.pathname.slice(1));
-            console.log('- Username:', url.username);
-            console.log('- Has password:', !!url.password);
-            console.log('- Search params:', url.search);
-          } catch (err) {
-            console.error('Failed to parse DATABASE_URL:', err.message);
-            process.exit(1);
-          }
-
-          const config = {
-            connectionString: dbUrl,
-            ssl: {
-              rejectUnauthorized: false
-            }
-          };
-
-          console.log('Attempting connection with config:', JSON.stringify({
-            ...config,
-            connectionString: config.connectionString.substring(0, 20) + '...'
-          }, null, 2));
-          
-          try {
-            const pool = new Pool(config);
-            const client = await pool.connect();
-            console.log('Successfully connected to database');
-            await client.query('SELECT 1');
-            console.log('Successfully executed test query');
-            client.release();
-            await pool.end();
-            process.exit(0);
-          } catch (err) {
-            console.error('Connection error:', err);
-            process.exit(1);
-          }
-        }
-
-        testConnection();
-        EOF
-
-        node test-db.js
-
-    - name: Run database migrations
-      env:
-        DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        NODE_ENV: test
-      run: |
-        echo "Running migrations with database URL: ${DATABASE_URL:0:20}..." # Log first 20 chars for debugging
-        npm run migrate
+      run: npm ci
 
     - name: Run linting
-      run: |
-        echo "Running linting..."
-        # Create a temporary .eslintrc.json file
-        cat > .eslintrc.json << 'EOF'
-        {
-          "extends": "next/core-web-vitals"
-        }
-        EOF
-        # Run linting with the new config
-        npx eslint .
+      run: npm run lint
 
     - name: Run tests
       env:
