--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint":  "npx eslint .",
+    "lint": "npx eslint .",
     "migrate": "node scripts/run-migrations.js",
     "test:db": "ts-node -r dotenv/config scripts/test-db.ts"
   },
@@ -87,6 +87,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.27.0",
+    "eslint-config-next": "^15.3.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
