--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "npx eslint .",
     "migrate": "node scripts/run-migrations.js",
-    "test:db": "ts-node -r dotenv/config scripts/test-db.ts"
+    "test:db": "ts-node -r dotenv/config scripts/test-db.ts",
+    "test": "npm run test:db"
   },
   "dependencies": {
     "@ai-sdk/groq": "latest",
