--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "next start",
     "lint": "npx eslint .",
     "migrate": "node scripts/run-migrations.js",
-    "test:db":  "ts-node -r dotenv/config scripts/test-db.ts"
-,
+    "test:db":  "ts-node -r dotenv/config scripts/test-db.ts",
     "test": "npm run test:db"
   },
   "dependencies": {
