--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -70,6 +70,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Debug secret exists
+        run: |
+          if [ -z "${{ secrets.CR_PAT }}" ]; then
+            echo "CR_PAT is empty!"
+            exit 1
+          else
+            echo "CR_PAT is set"
+          fi
+          
       - name: Log in to Container registry
         uses: docker/login-action@v3
         with:
