--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,7 +58,7 @@ jobs:
   build-and-deploy:
     needs: test
     runs-on: ubuntu-latest
-    environment: production
+    environment: feature
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
