--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -106,4 +106,4 @@ jobs:
 
       - name: Deploy to production server
         run: |
-          ssh ${{ secrets.SERVER_BOT }}@${{ secrets.SERVER_IP }} "cd ${{ env.DEPLOY_PATH }} && ./deploy.sh"
+          ssh ${{ secrets.SERVER_BOT }}@${{ secrets.SERVER_IP }} "./deploy.sh"
